tests/rt/pos/ifc/downgradeType.trp
let val x = if true raisedTo `{alice}`
            then 42
            else 21
    val x' = downgradeType (x, authority, `{}`)
    val _ = blockdown authority
in (x, x')
end

