tests/rt/neg/ifc/endorseType.trp
let val x = if true raisedTo `{alice}`
            then 42
            else 21
    val _ = blockdown authority
    val x' = endorseType (x, attenuate (authority, `{bob}`), `<alice; #root-integrity>`)
in (x, x')
end

